force-app/main/default/objects/Lead/fields/Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range__c</fullName>
    <label>Employee Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 to 50</fullName>
            </value>
            <value>
                <fullName>51 to 250</fullName>
            </value>
            <value>
                <fullName>251 to 1000</fullName>
            </value>
            <value>
                <fullName>1001 to 5000</fullName>
            </value>
            <value>
                <fullName>5001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>