force-app/main/default/objects/Lead/fields/GP_Cold_Score__c.field-meta.xml
<CustomField>
    <fullName>GP_Cold_Score__c</fullName>
    <label>GP Cold Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>