force-app/main/default/objects/Lead/fields/GP_Cold_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>GP_Cold_Score_Date__c</fullName>
    <label>GP Cold Score Date</label>
    <type>DateTime</type>
</CustomField>