force-app/main/default/objects/Lead/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <label>Lead Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>