force-app/main/default/objects/Lead/fields/Role_Formula__c.field-meta.xml
<CustomField>
    <fullName>Role_Formula__c</fullName>
    <label>Role Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>