force-app/main/default/objects/Lead/fields/Salesforce_Edition__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Edition__c</fullName>
    <label>Salesforce Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>