force-app/main/default/objects/Lead/fields/Salesforce_Seats__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Seats__c</fullName>
    <label>Salesforce Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>